Fixed z-index issues with modal

--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -23,7 +23,8 @@
 	position: fixed;
 	transform: translateX(-50%) translateY(-50%);
 	visibility: hidden;
-	z-index: 2000;
+	z-index: 200000;
+	/* z-index: 2000; */
 }
 
 .md-show { visibility: visible; }
@@ -37,7 +38,8 @@
 	position: fixed;
 	transition: all 0.3s;
 	visibility: hidden;
-	z-index: 1000;
+	z-index: 100000;
+	/* z-index: 1000; */
 }
 
 .md-show ~ .md-overlay {
